fixed bug where the edit button on the edit page became a menu button on mobile

--- a/expat-journal-app/src/styles/post.css
+++ b/expat-journal-app/src/styles/post.css
@@ -161,7 +161,7 @@ div.flex-container1 {
 }
 
 @media screen and (max-width: 500px){
-    div.flex-container1{
+    div.header-menu{
 		display: none;
 	}
 }
